# CMproj

./: CMakeLists.txt  main.cpp
task1/: 1t.cpp  CMakeLists.txt
task2/: 1.txt  2t.cpp  CMakeLists.txt
task3/: 1.txt  3t.cpp  CMakeLists.txt
task4/: 4t.cpp  CMakeLists.txt
task5/: 5t.cpp  CMakeLists.txt
